--- a/package.json
+++ b/package.json
@@ -5,23 +5,27 @@
   "keywords": [],
   "homepage": "https://github.com/pivotal-cf/gulp-jasmine-browser",
   "bugs": "https://github.com/pivotal-cf/gulp-jasmine-browser/issues",
-  "files": ["index.js", "README.md", "LICENSE"],
+  "files": [
+    "index.js",
+    "README.md",
+    "LICENSE"
+  ],
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/pivotal-cf/gulp-jasmine-browser"
   },
   "devDependencies": {
-    "jasmine": "^2.2.0",
-    "selenium-standalone": "^4.2.0",
-    "webdriverio": "^2.4.5",
     "gulp": "^3.8.11",
-    "jsdom": "^3.1.2"
+    "gulp-webpack": "^1.3.0",
+    "jasmine": "^2.2.0",
+    "cheerio": "^0.18.0",
+    "selenium-standalone": "^4.2.0",
+    "webdriverio": "^2.4.5"
   },
   "dependencies": {
     "jasmine-core": "^2.2.0",
     "through2": "^1.1.1",
-    "through2-reduce": "^0.3.0",
     "phantomjs": "^1.9.16",
     "vinyl": "^0.4.6",
     "express": "^4.12.2"
