--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 ---
 language: node_js
 node_js:
-  - 0.10
+  - 0.12
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+before_script:
+  - selenium-standalone install
