--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "webdriverio": "^2.4.5"
   },
   "dependencies": {
+    "express": "^4.12.2",
     "jasmine-core": "^2.2.0",
     "through2": "^1.1.1",
-    "vinyl": "^0.4.6",
-    "express": "^4.12.2"
+    "vinyl": "^0.4.6"
   },
   "peerDependencies": {
     "gulp": "^3.8.11"
