Include spec_runner in package
Signed-off-by: Nicole Sullivan <nsullivan@pivotal.io>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "files": [
     "index.js",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "lib/spec_runner.js"
   ],
   "main": "index.js",
   "repository": {
