Add lib to package.json
Signed-off-by: Nicole Sullivan <nsullivan@pivotal.io>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "index.js",
     "README.md",
     "LICENSE",
-    "lib/spec_runner.js"
+    "lib"
   ],
   "main": "index.js",
   "repository": {
