--- a/package.json
+++ b/package.json
@@ -3,25 +3,39 @@
   "version": "0.0.4",
   "license": "MIT",
   "description": "",
-  "keywords": [],
+  "keywords": [
+    "gulp",
+    "gulpplugin",
+    "jasmine",
+    "test",
+    "testing",
+    "spec"
+  ],
   "homepage": "https://github.com/jasmine/gulp-jasmine-browser",
   "bugs": "https://github.com/jasmine/gulp-jasmine-browser/issues",
-  "files": [
-    "index.js",
-    "README.md",
-    "LICENSE.md",
-    "lib"
-  ],
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/jasmine/gulp-jasmine-browser"
   },
   "devDependencies": {
+    "babel": "^5.2.17",
     "cheerio": "^0.18.0",
+    "del": "^1.1.1",
+    "eslint": "^0.20.0",
+    "eslint-plugin-react": "^2.2.0",
     "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
+    "gulp-eslint": "^0.11.1",
+    "gulp-jasmine": "^2.0.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-plumber": "^1.0.0",
     "gulp-webpack": "^1.3.0",
     "jasmine": "^2.2.0",
+    "merge-stream": "^0.1.7",
+    "npm": "^2.9.1",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.0",
     "selenium-standalone": "^4.2.0",
     "webdriverio": "^2.4.5"
   },
@@ -37,6 +51,6 @@
     "gulp": "^3.8.11"
   },
   "scripts": {
-    "test": "node_modules/.bin/jasmine"
+    "test": "gulp"
   }
 }
