--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-eslint": "^0.11.1",
+    "gulp-header": "^1.2.2",
     "gulp-jasmine": "^2.0.1",
     "gulp-load-plugins": "^0.10.0",
     "gulp-plumber": "^1.0.0",
@@ -40,6 +41,7 @@
     "webdriverio": "^2.4.5"
   },
   "dependencies": {
+    "babel-runtime": "^5.2.17",
     "express": "^4.12.2",
     "jasmine-core": "^2.2.0",
     "mime": "^1.3.4",
