--- a/.eslintrc
+++ b/.eslintrc
@@ -28,9 +28,7 @@
     "unicodeCodePointEscapes": true
   },
 
-  "plugins": [
-    "react"
-  ],
+  "parser": "babel-eslint",
 
   "rules": {
     "camelcase": 0,
@@ -43,14 +41,6 @@
     "no-underscore-dangle": 0,
     "no-unused-expressions": 0,
     "quotes": [1, "single"],
-    "react/jsx-uses-vars": 1,
-    "react/jsx-no-undef": 1,
-    "react/jsx-quotes": [1, "double", "avoid-escape"],
-    "react/no-did-mount-set-state": 1,
-    "react/no-did-update-set-state": 1,
-    "react/prop-types": [1, {ignore: ['children', 'className', 'id', 'style']}],
-    "react/self-closing-comp": 1,
-    "react/wrap-multilines": 1,
     "strict": 0
   }
 }
