--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ node_js:
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-before_script:
-  - selenium-standalone install
+#before_script:
+#  - selenium-standalone install
