--- a/package.json
+++ b/package.json
@@ -45,12 +45,16 @@
   "dependencies": {
     "babel-runtime": "^5.2.17",
     "es6-promisify": "^1.1.1",
+    "event-stream": "^3.3.1",
     "express": "^4.12.2",
     "jasmine-core": "^2.2.0",
     "mime": "^1.3.4",
     "portfinder": "^0.4.0",
     "through2": "^1.1.1",
     "vinyl": "^0.4.6"
+  },
+  "optionalDependencies": {
+    "slimerjs": "0.9.2"
   },
   "peerDependencies": {
     "gulp": "^3.8.11",
