--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "merge-stream": "^0.1.7",
     "methods": "^1.1.1",
     "npm": "^2.9.1",
+    "phantomjs": "^1.9.17",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
     "selenium-standalone": "^4.2.0",
+    "slimerjs": "0.9.2",
     "supertest": "git://github.com/visionmedia/supertest.git#bf2f5e7c55030b46995a85ada42c21d285f25716",
-    "webdriverio": "^2.4.5"
+    "webdriverio": "^2.4.5",
+    "webpack-stream": "^2.0.0"
   },
   "dependencies": {
     "babel-runtime": "^5.5.4",
@@ -50,11 +53,9 @@
     "jasmine-core": "^2.2.0",
     "mime": "^1.3.4",
     "portfinder": "^0.4.0",
+    "serve-favicon": "^2.3.0",
     "through2": "^1.1.1",
     "vinyl": "^0.4.6"
-  },
-  "optionalDependencies": {
-    "slimerjs": "0.9.2"
   },
   "peerDependencies": {
     "gulp": "^3.8.11",
