--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel": "^5.5.4",
     "babel-eslint": "^3.1.13",
     "cheerio": "^0.18.0",
+    "debug": "^2.2.0",
     "del": "^1.1.1",
     "eslint": "^0.20.0",
     "gulp": "^3.8.11",
@@ -31,7 +32,6 @@
     "gulp-jasmine": "^2.0.1",
     "gulp-load-plugins": "^0.10.0",
     "gulp-plumber": "^1.0.0",
-    "gulp-webpack": "^1.3.0",
     "jasmine": "^2.2.0",
     "merge-stream": "^0.1.7",
     "methods": "^1.1.1",
@@ -41,7 +41,7 @@
     "run-sequence": "^1.1.0",
     "selenium-standalone": "^4.2.0",
     "slimerjs": "0.9.2",
-    "supertest": "git://github.com/visionmedia/supertest.git#bf2f5e7c55030b46995a85ada42c21d285f25716",
+    "supertest": "^1.0.1",
     "webdriverio": "^2.4.5",
     "webpack-stream": "^2.0.0"
   },
@@ -51,9 +51,12 @@
     "event-stream": "^3.3.1",
     "express": "^4.12.2",
     "jasmine-core": "^2.2.0",
+    "lazypipe": "^1.0.1",
+    "lodash.once": "^3.0.1",
     "mime": "^1.3.4",
     "portfinder": "^0.4.0",
     "serve-favicon": "^2.3.0",
+    "stream-reduce": "^1.0.3",
     "through2": "^1.1.1",
     "vinyl": "^0.4.6"
   },
