--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-  "loose": "all",
-  "stage": 0,
-  "optional": ["runtime"]
+  "ignore": ["node_modules"],
+  "presets": ["es2015-loose", "stage-0"],
+  "plugins": [
+    "transform-object-assign",
+    "transform-runtime"
+  ]
 }
