--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cheerio": "^0.18.0",
     "debug": "^2.2.0",
     "del": "^1.1.1",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-eslint": "^1.1.1",
     "gulp-header": "^1.2.2",
@@ -41,30 +41,30 @@
     "merge-stream": "^0.1.7",
     "methods": "^1.1.1",
     "npm": "^2.9.1",
-    "phantomjs": "^1.9.17",
+    "phantomjs": "^1.9.19",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
-    "selenium-standalone": "^4.2.0",
-    "slimerjs": "^0.9.6",
+    "selenium-standalone": "^4.8.0",
+    "slimerjs": "^0.9.5",
     "supertest": "^1.0.1",
-    "webdriverio": "^2.4.5",
+    "webdriverio": "^3.4.0",
     "webpack-stream": "^2.0.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
-    "es6-promisify": "^1.1.1",
-    "event-stream": "^3.3.1",
-    "express": "^4.12.2",
-    "jasmine-core": "^2.2.0",
+    "event-stream": "^3.3.2",
+    "express": "^4.13.3",
+    "jasmine-core": "^2.4.1",
     "lazypipe": "^1.0.1",
     "lodash.once": "^3.0.1",
     "mime": "^1.3.4",
     "portfinder": "^0.4.0",
     "serve-favicon": "^2.3.0",
     "stream-reduce": "^1.0.3",
-    "through2": "^1.1.1",
-    "vinyl": "^0.4.6"
+    "thenify": "^3.1.1",
+    "through2": "^2.0.0",
+    "vinyl": "^1.1.0"
   },
   "peerDependencies": {
     "gulp": "^3.9.0",
