--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "phantomjs": "^1.9.19",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
-    "selenium-standalone": "^4.8.0",
-    "slimerjs": "^0.9.5",
+    "selenium-standalone": "^5.1.0",
+    "slimerjs": "^0.9.6",
+    "strong-wait-till-listening": "^1.0.2",
     "supertest": "^1.0.1",
-    "webdriverio": "^3.4.0",
+    "thenify": "^3.2.0",
+    "webdriverio": "^4.0.5",
     "webpack-stream": "^2.0.0"
   },
   "dependencies": {
@@ -60,6 +62,7 @@
     "lodash.once": "^3.0.1",
     "mime": "^1.3.4",
     "portfinder": "^0.4.0",
+    "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
     "stream-reduce": "^1.0.3",
     "thenify": "^3.1.1",
