--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "portfinder": "^0.4.0",
     "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
+    "sourcemapped-stacktrace": "^1.0.1",
     "stream-reduce": "^1.0.3",
     "thenify": "^3.1.1",
     "through2": "^2.0.0",
