--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "methods": "^1.1.1",
     "npm": "^2.9.1",
     "phantomjs": "^1.9.19",
+    "phantomjs-prebuilt": "^2.1.7",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
     "selenium-standalone": "^5.1.0",
