--- a/.eslintrc
+++ b/.eslintrc
@@ -30,10 +30,16 @@
 
   "parser": "babel-eslint",
 
+  "plugins": ["jasmine"],
+
   "rules": {
     "camelcase": 0,
     "curly": 0,
     "eol-last": 0,
+    "jasmine/no-spec-dupes": 0,
+    "jasmine/no-suite-dupes": 0,
+    "jasmine/no-disabled-tests": 1,
+    "jasmine/no-focused-tests": 2,
     "no-undef": 0,
     "no-path-concat": 0,
     "no-process-exit": 0,
