--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cheerio": "^0.18.0",
     "debug": "^2.2.0",
     "del": "^1.1.1",
+    "eslint-plugin-jasmine": "^1.8.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-eslint": "^1.1.1",
