--- a/package.json
+++ b/package.json
@@ -21,37 +21,38 @@
   "devDependencies": {
     "babel": "^6.3.26",
     "babel-core": "^6.4.0",
-    "babel-eslint": "^4.1.6",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-transform-object-assign": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.4.0",
-    "babel-preset-es2015-loose": "^6.1.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-stage-0": "^6.3.13",
-    "cheerio": "^0.18.0",
+    "cheerio": "^0.20.0",
     "debug": "^2.2.0",
-    "del": "^1.1.1",
+    "del": "^2.2.0",
     "eslint-plugin-jasmine": "^1.8.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
-    "gulp-eslint": "^1.1.1",
+    "gulp-eslint": "^2.0.0",
     "gulp-header": "^1.2.2",
     "gulp-if": "^2.0.0",
     "gulp-jasmine": "^2.0.1",
-    "gulp-load-plugins": "^0.10.0",
+    "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.0.0",
     "jasmine": "^2.2.0",
-    "merge-stream": "^0.1.7",
+    "merge-stream": "^1.0.0",
     "methods": "^1.1.1",
-    "npm": "^2.9.1",
-    "phantomjs": "^1.9.19",
+    "npm": "^3.9.2",
+    "phantomjs": "^2.1.7",
     "phantomjs-prebuilt": "^2.1.7",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
     "selenium-standalone": "^5.1.0",
-    "slimerjs": "^0.9.6",
+    "slimerjs": "^0.906.1",
     "strong-wait-till-listening": "^1.0.2",
     "supertest": "^1.0.1",
     "webdriverio": "^4.0.5",
-    "webpack-stream": "^2.0.0"
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.3.14",
@@ -60,9 +61,9 @@
     "express": "^4.13.3",
     "jasmine-core": "^2.4.1",
     "lazypipe": "^1.0.1",
-    "lodash.once": "^3.0.1",
+    "lodash.once": "^4.0.0",
     "mime": "^1.3.4",
-    "portfinder": "^0.4.0",
+    "portfinder": "^1.0.3",
     "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
     "sourcemapped-stacktrace": "^1.0.1",
