deprecate usage of event-stream and use through2 where possible, update test dependencies

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-jasmine": "^1.8.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-header": "^1.2.2",
     "gulp-if": "^2.0.0",
     "gulp-jasmine": "^2.0.1",
@@ -50,19 +50,19 @@
     "selenium-standalone": "^5.5.0",
     "slimerjs": "^0.906.1",
     "strong-wait-till-listening": "^1.0.2",
-    "supertest": "^1.0.1",
+    "supertest": "^2.0.0",
     "webdriverio": "^4.2.5",
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
-    "event-stream": "^3.3.2",
     "express": "^4.13.3",
     "jasmine-core": "^2.4.1",
     "lazypipe": "^1.0.1",
     "lodash.once": "^4.0.0",
     "mime": "^1.3.4",
+    "multipipe": "^0.3.1",
     "portfinder": "^1.0.3",
     "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
@@ -70,6 +70,8 @@
     "stream-reduce": "^1.0.3",
     "thenify": "^3.1.1",
     "through2": "^2.0.0",
+    "through2-reduce": "^1.1.1",
+    "through2-spy": "^2.0.0",
     "vinyl": "^1.1.0"
   },
   "peerDependencies": {
