--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.0.0",
     "jasmine": "^2.2.0",
+    "jasmine-async-suite": "0.0.4",
     "merge-stream": "^1.0.0",
     "methods": "^1.1.1",
     "npm": "^3.9.2",
