--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 ---
 language: node_js
 node_js:
-  - 0.12
+  - "4"
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
