--- a/.eslintrc
+++ b/.eslintrc
@@ -1,31 +1,14 @@
 {
   "env": {
+    "es6": true,
+    "browser": true,
+    "phantomjs": true,
     "node": true,
     "jasmine": true
   },
 
   "ecmaFeatures": {
-    "arrowFunctions": true,
-    "blockBindings": true,
-    "binaryLiterals": true,
-    "classes": true,
-    "defaultParams": true,
-    "destructuring": true,
-    "forOf": true,
-    "generators": true,
-    "jsx": true,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralDuplicateProperties": true,
-    "objectLiteralShorthandMethods": true,
-    "objectLiteralShorthandProperties": true,
-    "octalLiterals": true,
-    "regexYFlag": true,
-    "regexUFlag": true,
-    "restParams": true,
-    "spread": true,
-    "superInFunctions": true,
-    "templateStrings": true,
-    "unicodeCodePointEscapes": true
+    "modules": true
   },
 
   "parser": "babel-eslint",
