--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "gulp-jasmine": "^2.0.1",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.0.0",
-    "jasmine": "^2.2.0",
-    "jasmine-async-suite": "0.0.4",
+    "jasmine-async-suite": "^0.0.5",
     "merge-stream": "^1.0.0",
     "methods": "^1.1.1",
     "npm": "^3.9.2",
@@ -49,7 +48,7 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
     "selenium-standalone": "^5.5.0",
-    "slimerjs": "^0.906.1",
+    "slimerjs": "^0.906.2",
     "strong-wait-till-listening": "^1.0.2",
     "supertest": "^2.0.0",
     "webdriverio": "^4.2.5",
@@ -59,7 +58,10 @@
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
     "express": "^4.13.3",
+    "flat-map": "^0.1.0",
+    "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
+    "jasmine-json-stream-reporter": "^0.0.5",
     "lazypipe": "^1.0.1",
     "lodash.once": "^4.0.0",
     "mime": "^1.3.4",
@@ -68,6 +70,7 @@
     "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
     "sourcemapped-stacktrace": "^1.0.1",
+    "split2": "^2.1.0",
     "stream-reduce": "^1.0.3",
     "thenify": "^3.1.1",
     "through2": "^2.0.0",
