--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "url": "https://github.com/jasmine/gulp-jasmine-browser"
   },
   "devDependencies": {
-    "babel": "^6.3.26",
     "babel-core": "^6.4.0",
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-object-assign": "^6.3.13",
@@ -59,9 +58,9 @@
     "babel-runtime": "^6.3.19",
     "express": "^4.13.3",
     "flat-map": "^0.1.0",
-    "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
-    "jasmine-json-stream-reporter": "^0.0.5",
+    "jasmine-json-stream-reporter": "0.0.6",
+    "jasmine-terminal-reporter": "^1.0.2",
     "lazypipe": "^1.0.1",
     "lodash.once": "^4.0.0",
     "mime": "^1.3.4",
