--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "url": "https://github.com/jasmine/gulp-jasmine-browser"
   },
   "devDependencies": {
-    "babel": "^6.3.26",
     "babel-core": "^6.4.0",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^6.1.2",
     "babel-plugin-transform-object-assign": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.4.0",
     "babel-preset-es2015": "^6.9.0",
@@ -39,8 +38,7 @@
     "gulp-jasmine": "^2.0.1",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.0.0",
-    "jasmine": "^2.2.0",
-    "jasmine-async-suite": "0.0.4",
+    "jasmine-async-suite": "^0.0.7",
     "merge-stream": "^1.0.0",
     "methods": "^1.1.1",
     "npm": "^3.9.2",
@@ -49,7 +47,7 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.0",
     "selenium-standalone": "^5.5.0",
-    "slimerjs": "^0.906.1",
+    "slimerjs": "^0.906.2",
     "strong-wait-till-listening": "^1.0.2",
     "supertest": "^2.0.0",
     "webdriverio": "^4.2.5",
@@ -59,15 +57,18 @@
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
     "express": "^4.13.3",
+    "flat-map": "^0.1.0",
     "jasmine-core": "^2.4.1",
+    "jasmine-json-stream-reporter": "^0.0.7",
+    "jasmine-terminal-reporter": "^1.0.2",
     "lazypipe": "^1.0.1",
     "lodash.once": "^4.0.0",
     "mime": "^1.3.4",
-    "multipipe": "^0.3.1",
     "portfinder": "^1.0.3",
     "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
     "sourcemapped-stacktrace": "^1.0.1",
+    "split2": "^2.1.0",
     "stream-reduce": "^1.0.3",
     "thenify": "^3.1.1",
     "through2": "^2.0.0",
