--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
   "ignore": ["node_modules"],
-  "presets": ["es2015-loose", "stage-0"],
+  "presets": [["es2015", {"loose": true}], "stage-0"],
   "plugins": [
-    "transform-object-assign",
+    "add-module-exports",
     "transform-runtime"
   ]
 }
