--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "lazypipe": "^1.0.1",
     "lodash.once": "^4.0.0",
     "mime": "^1.3.4",
-    "portfinder": "^1.0.7",
+    "portastic": "^1.0.1",
     "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
     "sourcemapped-stacktrace": "^1.0.1",
