--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "require-dir": "^0.3.2",
     "run-sequence": "^1.1.0",
     "selenium-standalone": "^6.5.0",
-    "simple-headless-chrome": "^2.5.10",
     "slimerjs": "^0.906.2",
     "supertest": "^3.0.0",
     "wait-on": "^2.0.2",
@@ -65,6 +64,7 @@
     "lodash.once": "^4.0.0",
     "mime": "^1.3.4",
     "portastic": "^1.0.1",
+    "puppeteer": "^0.13.0",
     "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
     "sourcemapped-stacktrace": "^1.0.1",
