--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "thenify": "^3.1.1",
     "through2": "^2.0.0",
     "through2-reduce": "^1.1.1",
-    "vinyl": "^1.2.0"
+    "vinyl": "^1.2.0",
+    "ws": "^3.3.1"
   },
   "peerDependencies": {
     "gulp": "^3.9.0",
