--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "thenify": "^3.1.1",
     "through2": "^2.0.0",
     "through2-reduce": "^1.1.1",
-    "vinyl": "^1.2.0",
-    "ws": "^3.3.1"
+    "vinyl": "^1.2.0"
   },
   "peerDependencies": {
     "gulp": "^3.9.0",
