--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "jasmine-json-stream-reporter": "^0.3.1",
     "jasmine-profile-reporter": "^0.0.2",
     "jasmine-terminal-reporter": "^1.0.2",
-    "lazypipe": "^1.0.1",
     "lodash.once": "^4.0.0",
     "mime": "^1.3.4",
+    "multipipe": "^2.0.1",
     "portastic": "^1.0.1",
     "qs": "^5.2.0",
     "serve-favicon": "^2.3.0",
