--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ addons:
     packages:
       - g++-4.8
 before_install:
+# phantomjs and slimerjs need access to TMPDIR
+  - export TMPDIR=/tmp
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 before_script:
