--- a/package.json
+++ b/package.json
@@ -76,8 +76,9 @@
     "ws": "^3.3.1"
   },
   "peerDependencies": {
+    "fancy-log": "^1.3.2",
     "gulp": ">=3.9.0",
-    "gulp-util": ">=3.0.8"
+    "plugin-error": "^0.1.2"
   },
   "scripts": {
     "test": "gulp"
